# ohhar

./: .cursorignore  .envrc  .gitignore  .vars  README.md  main.py  pyproject.toml
.github/workflows/: fetch-webami-data.yml
curl/: get_available_weeks.hurl
notebooks/: available_weeks.csv  discovery.ipynb
oh_har/: main.py
oh_har/oh_har.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/fixtures/: aw.csv
